<resources>
    <string name="app_name">MusicaeV1</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Npedidos">0</string>
    <string name="txtPedidos">Pedidos</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="txtCriarBanda">Cria a tua Banda</string>
    <string name="txtCriarBandaNome">Nome da Banda</string>
    <string name="txtCriarBandaLocalizacao">Cidade</string>
    <string name="txtCriarBandaContacto">Telemóvel</string>
    <string name="txtCriarBandaCancelar">Cancelar</string>
    <string name="txtCriarBandaCriar">Criar</string>
    <string name="txtFiltroHabilidade">Habilidade:</string>
    <string name="txtFiltroGenero">Género de Música:</string>
    <string name="txtFiltroIdade">Idade</string>
    <string name="txtFiltroDe">de</string>
    <string name="txtFiltroA">a</string>
    <string name="txtFiltroExperiencia">Experiência:</string>
    <string name="txtFiltroCompromisso">Compromisso</string>
    <string name="txtFiltroPeloMenos">Pelo Menos</string>
    <string name="txtFiltroExato">Exato</string>
    <string name="txtFiltroProcurar">PROCURAR</string>
    <string name="txtLembrarConta">Lembrar Conta</string>
    <string name="txtLogin">Login</string>
    <string name="txtPerfilBandaDesc">Descrição</string>
    <string name="txtPerfilBandaGenero">Género Musical:</string>
    <string name="txtPerfilBandaMembros">Membros</string>
    <string name="txtPerfilBandaContacto">Telemóvel</string>
    <string name="txtPerfilBandaLocalizacao">Cidade</string>
    <string name="btnEditar">Editar</string>
    <string name="btnCandidatos">Candidatos</string>
    <string name="txtDetalhes">Detalhes da Conta</string>
    <string name="txtDetalhesPNome">Primeiro Nome</string>
    <string name="txtDetalhesUNome">Último Nome</string>
    <string name="txtDetalhesEmail">Email</string>
    <string name="txtDetalhesContacto">Telemóvel</string>
    <string name="txtDetalhesLocalizacao">Cidade</string>
    <string name="txtDetalhesDta">Data de Nascimento</string>
    <string name="txtFinalUsername">Username</string>
    <string name="txtFinalPassword">Password</string>
    <string name="txtFinalConfPass">Confirmar Password</string>
    <string name="btnFinalRegistar">Registar</string>
    <string name="txtGenero">Género favorito</string>
    <string name="txtInstrumento">Que instrumento tocas?</string>
    <string name="txtProcurar">Procurar Pessoas</string>
    <string name="txtProcurarInstrumento">Instrumento:</string>
    <string name="txtProcurarExperiencia">Experiência:</string>
    <string name="txtProcurarCompromisso">Compromisso:</string>
    <string name="txtProcurarPeloMenos">Pelo Menos</string>
    <string name="txtProcurarExato">Exato</string>
    <string name="btnProcurarCancelar">Cancelar</string>
    <string name="btnProcurarCriar">Criar Procura</string>
    <string name="txtWelcomeSlogan">A Música é o Verbo do Futuro</string>
    <string name="btnLogin">Login</string>
    <string name="txtWelcomeMembro">Ainda não és membro?</string>
    <string name="txtWelcomeRegistar">Regista-te</string>
    <string name="txtListaBandasAtuais">Bandas Atuais</string>
    <string name="txtListaBandasPassadas">Bandas Passadas</string>
    <string name="txtListaBandasPendentes">Bandas Pendentes</string>
    <string name="txtMenuProfileUser">Username</string>
    <string name="txtMenuProfileEmail">Email</string>
    <string name="txtListaCandidaturaNome">Nome</string>
    <string name="txtListaCandidaturaInstrumento">Instrumento</string>
    <string name="txtListaBandaNome">Nome:</string>
    <string name="txtListaBandaInstrumento">Instrumento:</string>
    <string name="txtListaBandaDataEntrada">Data Entrada:</string>
    <string name="txtFeedNome">Nome:</string>
    <string name="txtFeedInstrumento">Instrumento:</string>
    <string name="txtFeedExperiencia">Experiência:</string>
    <string name="txtFeedCompromisso">Compromisso:</string>
    <string name="txtProfileUsername">Username</string>
    <string name="txtProfileXXX">#XXX</string>
    <string name="txtProfileEmail">xxxxxxxxxxx@gmail.com</string>
    <string name="txtProfileBandas">Bandas</string>
    <string name="txtProfileEditar">Editar</string>
    <string name="txtProfileInstrumentos">Instrumentos</string>
    <string name="txtProfileGuitarra">Guitarra</string>
    <string name="txtProfileGeneros">Géneros</string>
    <string name="txtProfileRap">Rap</string>
    <string name="txtProfileNome">Nome</string>
    <string name="txtProfileNomeCompleto">FullName</string>
    <string name="txtProfileSexo">Sexo</string>
    <string name="txtProfileMasculino">Male</string>
    <string name="txtProfileCidade">Cidade</string>
    <string name="txtProfileLeiria">Leiria</string>
    <string name="txtProfileNrTelemovel">Número Telemóvel</string>
    <string name="txtProfileNrTelemovel2">(+351) 123456789</string>
    <string name="txtProfileDataNasc">Data de Nascimento</string>
    <string name="txtProfileDataNasc2">11/22/3333</string>
    <string name="txtFragFeedFiltro">Filtro</string>
    <string name="txtFragFeedOrganizar">Organizar por</string>
    <string name="txtFragFeedNome">Nome</string>
    <string name="txtFragFeedInstrumento">Instrumento</string>

</resources>
