<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.CreateBandActivity"
    android:background="@drawable/backround_filter">

    <Space
        android:id="@+id/spaceV"
        android:layout_width="50dp"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/spaceV"
        android:fontFamily="@font/regular"
        android:text="@string/txtCriarBanda"
        android:textColor="@color/gray"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBandName"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:hint="@string/txtCriarBandaNome"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:layout_below="@id/tv"
        android:layout_toEndOf="@id/spaceV" />

    <Spinner
        android:id="@+id/spinnerGenre"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:textColor="?attr/editTextColor"
        android:background="?attr/editTextBackground"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:layout_below="@id/etBandName"
        android:layout_toEndOf="@id/spaceV" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:hint="@string/txtCriarBandaLocalizacao"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:layout_below="@id/spinnerGenre"
        android:layout_toEndOf="@id/spaceV" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:hint="@string/txtCriarBandaContacto"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        android:layout_below="@id/etCity"
        android:layout_toEndOf="@id/spaceV" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="305dp"
        android:layout_height="150dp"
        android:layout_below="@id/etPhone"
        android:layout_toEndOf="@id/spaceV"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:hint="Descrição"
        android:lines="5" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:background="@drawable/button_preto"
        android:fontFamily="@font/bold"
        android:text="@string/txtCriarBandaCancelar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/etDescription"
        android:layout_toEndOf="@id/spaceV"/>

    <Button
        android:id="@+id/btnCriarBanda"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:background="@drawable/button_preto"
        android:fontFamily="@font/bold"
        android:text="@string/txtCriarBandaCriar"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/etDescription"
        android:layout_toEndOf="@id/btnCancelar"/>

</RelativeLayout>