<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.SearchBandActivity"
    android:background="@drawable/backround_filter">

    <Space
        android:id="@+id/spaceV"
        android:layout_width="50dp"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/spaceV"
        android:fontFamily="@font/regular"
        android:text="@string/txtProcurar"
        android:textColor="@color/gray"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/spaceV"
        android:layout_marginTop="40dp"
        android:layout_below="@id/tv1"
        android:fontFamily="@font/bold"
        android:text="@string/txtProcurarInstrumento"
        android:textColor="@color/gray"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerInstrumento"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:textColor="?attr/editTextColor"
        android:background="?attr/editTextBackground"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:layout_below="@id/tv0"
        android:layout_toEndOf="@id/spaceV" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/spaceV"
        android:layout_marginTop="20dp"
        android:layout_below="@id/spinnerInstrumento"
        android:fontFamily="@font/bold"
        android:text="@string/txtProcurarExperiencia"
        android:textColor="@color/gray"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerExperiencia"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:textColor="?attr/editTextColor"
        android:background="?attr/editTextBackground"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:layout_below="@id/tv2"
        android:layout_toEndOf="@id/spaceV" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/spaceV"
        android:layout_marginTop="20dp"
        android:layout_below="@id/spinnerExperiencia"
        android:fontFamily="@font/bold"
        android:text="@string/txtProcurarCompromisso"
        android:textColor="@color/gray"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerCompromisso"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv3"
        android:layout_toEndOf="@id/spaceV"
        android:background="?attr/editTextBackground"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textColor="?attr/editTextColor" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_below="@id/spinnerCompromisso"
        android:layout_marginTop="150dp"
        android:layout_toEndOf="@id/spaceV"
        android:background="@drawable/button_preto"
        android:fontFamily="@font/bold"
        android:text="@string/btnProcurarCancelar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCriarProcura"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_below="@id/spinnerCompromisso"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:layout_toEndOf="@id/btnCancelar"
        android:background="@drawable/button_preto"
        android:fontFamily="@font/bold"
        android:text="@string/btnProcurarCriar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>