<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.RegisterDetailsActivity"
    android:background="@drawable/bkg_detalhes">

    <Space
        android:id="@+id/spaceV"
        android:layout_width="50dp"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/spaceV"
        android:fontFamily="@font/regular"
        android:text="@string/txtDetalhes"
        android:textColor="@color/gray"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/tv"
        android:layout_toEndOf="@id/spaceV" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:hint="@string/txtDetalhesPNome"
        android:inputType="textPersonName"
        android:layout_below="@id/space2"
        android:layout_toEndOf="@id/spaceV" />

    <Space
        android:id="@+id/space3"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/space2"
        android:layout_toEndOf="@id/etFirstName" />

    <Space
        android:id="@+id/space4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/etFirstName"
        android:layout_toEndOf="@id/spaceV" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:textColor="?attr/editTextColor"
        android:background="?attr/editTextBackground"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:layout_below="@id/space4"
        android:layout_toEndOf="@id/spaceV" />

    <Space
        android:id="@+id/space5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/spinnerGender"
        android:layout_toEndOf="@id/spaceV" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:hint="@string/txtDetalhesEmail"
        android:inputType="textEmailAddress"
        android:layout_below="@id/space5"
        android:layout_toEndOf="@id/spaceV" />

    <Space
        android:id="@+id/space6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/etEmail"
        android:layout_toEndOf="@id/spaceV" />

    <EditText
        android:id="@+id/etLocalidade"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_below="@id/space6"
        android:layout_toEndOf="@id/spaceV"
        android:hint="@string/txtDetalhesLocalizacao"
        android:inputType="textPersonName" />

    <Space
        android:id="@+id/space8"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/etLocalidade"
        android:layout_toEndOf="@id/spaceV" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:hint="@string/txtDetalhesDta"
        android:textColor="?attr/editTextColor"
        android:background="?attr/editTextBackground"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:layout_below="@id/space8"
        android:layout_toEndOf="@id/spaceV" />

    <Button
        android:id="@+id/button"
        android:layout_width="308dp"
        android:layout_height="38dp"
        android:layout_below="@id/tvDate"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@id/spaceV"
        android:background="@drawable/button_preto"
        android:fontFamily="@font/bold"
        android:text="@string/btnFinalRegistar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>