<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.BandListFragment">

    <Button
        android:id="@+id/btnAtuais"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/regular"
        android:text="@string/txtListaBandasAtuais"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPassadas"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/regular"
        android:text="@string/txtListaBandasPassadas"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnAtuais"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPendentes"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:fontFamily="@font/regular"
        android:text="@string/txtListaBandasPendentes"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAtuais" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="160dp"
        android:layout_marginRight="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPendentes"
        android:id="@+id/swipeLayout">

        <ListView
            android:id="@+id/lvListaBandas"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabADDbanda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/ic_action_add"
            app:backgroundTint="@color/red" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>